# yolov5_obb

./: CMakeLists.txt  Dockerfile  README.md  common.hpp  detect.py  evaluation.py  export.py  requirements.txt  test.py  test.txt  train.py  val.py  yololayer.cu  yololayer.h  yolov5_gen.cpp  yolov5_use.cpp
DOTA_demo_view/: 记得下载演示文件.txt
DOTA_devkit/: DOTA.py  ImgSplit.py  ImgSplit_multi_process.py  ResultMerge_multi_process.py  dota_evaluation_task1.py  dota_evaluation_task2.py  dota_poly2rbox.py  dota_utils.py  prepare_dota1_ms.py
DOTA_devkit/poly_nms_gpu/: poly_nms.cpp  poly_nms_kernel.cu  poly_overlaps.cpp  setup.py
DOTA_devkit/poly_nms_gpu/rotation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: DOTA_ROTATED.yaml  DroneVehicle_poly.yaml  dotav15_poly.yaml  dotav1_poly.yaml  hyp.finetune.yaml  hyp.scratch.yaml  yolov5obb_demo.yaml  yolov5obb_demo_split.yaml
data/hyps/obb/: hyp.finetune_DroneVehicle.yaml  hyp.finetune_dota.yaml  hyp.finetune_dota_CloseAug.yaml  hyp.paper.yaml
dataset/dataset_demo/: imgnamefile.txt  labelTxt.cache
dataset/dataset_demo/labelTxt/: P0032.txt
docs/: ChangeLog.md  GetStart.md  install.md
models/: common.py  experimental.py  tf.py  yolo.py  yolov5m.yaml  yolov5x.yaml
sh/: ddp_train.sh
tools/: TestJson2VocClassTxt.py  Xml2Txt.py
utils/: augmentations.py  autoanchor.py  datasets.py  evaluation_utils.py  general.py  google_utils.py  loss.py  metrics.py  plots.py  polyiou.cpp  rboxs_utils.py  torch_utils.py
utils/loggers/: __init__.py
utils/loggers/wandb/: README.md  wandb_utils.py
utils/nms_rotated/: __init__.py  nms_rotated_wrapper.py  setup.py
utils/nms_rotated/src/: box_iou_rotated_utils.h  nms_rotated_cpu.cpp  (+4 more)
weights/: 权重文件记得下载哟.txt
